que flojera css

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,11 @@
 <!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+
+<link rel="stylesheet" href="assets/css/contact-style.css">
+
+<div class="container">
+<form action="POST">
+    <label for="contact-email">Your email: <input type="email" id="contact-email" name="contact-email" required></label>
+    <label for="contact-message">Your message: <input type="text" id="contact-message" name="contact-message" required></label>
+    <input type="submit" value="submit" id="submit">
+</form>
+</div>
