--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -2,10 +2,17 @@
 
 <link rel="stylesheet" href="assets/css/contact-style.css">
 
-<div class="container">
-<form action="POST">
-    <label for="contact-email">Your email: <input type="email" id="contact-email" name="contact-email" required></label>
-    <label for="contact-message">Your message: <input type="text" id="contact-message" name="contact-message" required></label>
-    <input type="submit" value="submit" id="submit">
-</form>
+<div class="form-container">
+        <div class="item">
+                <label for="contact-email">Your email:</label> 
+                    <input type="email" id="contact-email" name="contact-email" required placeholder="your email here"> 
+        </div>
+        <div class="item">
+            <label for="contact-message">Your message:</label>
+                <textarea  id="contact-message" name="contact-message" required placeholder="your message here" rows="3" cols="30"></textarea>
+        </div>
+        <div class="item">
+        <input type="submit" value="submit" id="submit">
+        </div>
 </div>
+
