--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,9 @@
-<!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<link rel="stylesheet" href="/website/assets/css/firstheadingstyles.css">
+<div class="background">
+    <div class="title">
+        <h1>ONE PAGE WONDER</h1>
+    </div>
+    <div class="text">
+        <H2>Will Knock Your Socks off</H2>
+    </div>
+</div>
