--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,6 +1,6 @@
 <!-- your html code here -->
 
-<link rel="stylesheet" href="assets/css/contact-style.css">
+<link rel="stylesheet" href="assets/css/contactstyle.css">
 
 <div class="form-container">
         <div class="item">
