--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,9 @@
 <!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<link rel="stylesheet" href="../assets/css/service.css">
+<div class="main">
+  <img src="../assets/img/2.jpg" alt="Imagen">
+  <div class="text">
+    <h1 id="title"><strong>The Second Heading</strong> Is Pretty Cool Too</h1>
+    <p id="text">Donec ullamcorper nulla nom metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+  </div>
+</div>
