--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,18 +1,19 @@
 <!-- your html code here -->
 
-<link rel="stylesheet" href="assets/css/contactstyle.css">
-
-<div class="form-container">
-        <div class="item">
-                <label for="contact-email">Your email:</label> 
-                    <input type="email" id="contact-email" name="contact-email" required placeholder="your email here"> 
-        </div>
-        <div class="item">
-            <label for="contact-message">Your message:</label>
-                <textarea  id="contact-message" name="contact-message" required placeholder="your message here" rows="3" cols="30"></textarea>
-        </div>
-        <div class="item">
-        <input type="submit" value="submit" id="submit">
-        </div>
+<div class="container-sm bg-dark text-light">
+        <form  action="">
+                <div class="row mb-4">
+                        <label for="contactemail" class="col-sm-2 col-form-label">Your email:</label> 
+                        <div class="col-sm-10">
+                                <input type="email" id="contactemail" class="form-control"  required placeholder="your email here">
+                        </div>
+                        <label for="contactmessage" class="col-sm-2 col-form-label">Your message:</label> 
+                        <div class="col-sm">
+                                <textarea class="col-sm-10 col-form-label" placeholder="Leave a comment here" id="contactmessage"></textarea>
+                        </div>
+                </div>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary" type="button">Submit</button>
+                </div>
+        </form>
 </div>
-
