--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,9 +1,8 @@
 <!-- your html code here -->
-<link rel="stylesheet" href="../assets/css/service.css">
-<div class="main">
-  <img src="../assets/img/2.jpg" alt="Imagen">
-  <div class="text">
-    <h1 id="title"><strong>The Second Heading</strong> Is Pretty Cool Too</h1>
-    <p id="text">Donec ullamcorper nulla nom metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-  </div>
+<div class="container py-4 d-flex align-items-center justify-content-center gap-3">
+<img src="/website/assets/img/2.jpg" alt="Imagen" class="rounded-circle img-fluid" style="width: 200px; height: 200px; object-fit: cover;">
+    <div class="text" style="max-width: 600px;">
+        <h1 class="fs-4 fw-bold text-dark">The Second Heading Is Pretty Cool Too</h1>
+        <p class="fs-6 text-secondary">Donec ullamcorper nulla nom metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
 </div>
