--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,10 @@
 <!-- your html code here -->
-<!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+<div class="background d-flex flex-column align-items-center justify-content-center text-center"
+style="background-image: url('/website/assets/img/bg.jpg'); background-size: 100% 100%; background-repeat: no-repeat; background-position: center; height: 300px;"">
+    <div class="title">
+        <h1>ONE PAGE WONDER</h1>
+    </div>
+    <div class="text">
+        <H2>Will Knock Your Socks off</H2>
+    </div>
+</div>
