--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,5 +1,11 @@
-<!-- your html code here -->
-<p>Hello, I'm the navbar.html</p>
-<h1>hola mundo</h1>
-<h2>luis es ing</h2>
+<link rel="stylesheet" href="assets/css/navbarstyle.css"
 
+<nav class="navbar">
+    <div class="navbar-container">
+      <button>Start Bootstrap</button>
+      <button>About</button>
+      <button>Service</button>
+      <button>Portfolio</button>
+      <button>Contact</button>
+    </div>
+  </nav>
