--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,11 +1,22 @@
-<link rel="stylesheet" href="assets/css/navbarstyle.css"
-
-<nav class="navbar">
-    <div class="navbar-container">
-      <button>Start Bootstrap</button>
-      <button>About</button>
-      <button>Service</button>
-      <button>Portfolio</button>
-      <button>Contact</button>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-2 mb-2">
+  <a class="navbar-brand" href="#">Start Boostrap</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Services</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Portfolio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
