--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,3 +1,7 @@
+<div class="container-sm text-dark">
+    <h1>Porfolio </h1>
+    <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, teilus ac cursus commodo.</p>
+</div>
 <div class="container">
     <div class="row">
         <div class="col">
