--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,1 +1,7 @@
-<!-- your html code here -->
+<<div class="container py-4 d-flex align-items-center justify-content-center gap-3 mb-3">
+    <div class="text" style="max-width: 600px;">
+        <h1>This First Heading Will Catch Your Eye</h1>
+        <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Present commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+    <img src=" " alt="Imagen" class="rounded-circle img-fluid" style="width: 200px; height: 200px; object-fit: cover;">
+</div> 
