--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-2 mb-2">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-2">
   <a class="navbar-brand" href="#">Start Boostrap</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
