--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,40 +1,42 @@
-<div class="container-sm text-dark">
-    <h1>Porfolio </h1>
-    <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, teilus ac cursus commodo.</p>
-</div>
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="card shadow-sm">
-                <img src="/website/assets/img/proyecto1miniatura.jpg" class="card-img-top" alt="Descripción de la imagen">
-                <div class="card-body">
-                    <h3>Nombre del Proyecto 1</h3>
-                    <p>Breve descripción del proyecto. Tecnologías utilizadas: Diseño UI/UX, Figma.</p>
+<div class="mb-5">
+    <div class="container-sm text-dark">
+        <h1>Porfolio </h1>
+        <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, teilus ac cursus commodo.</p>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="card shadow-sm">
+                    <img src="/website/assets/img/proyecto1miniatura.jpg" class="card-img-top" alt="Descripción de la imagen">
+                    <div class="card-body">
+                        <h3>Nombre del Proyecto 1</h3>
+                        <p>Breve descripción del proyecto. Tecnologías utilizadas: Diseño UI/UX, Figma.</p>
+                    </div>
+                     <div class="d-flex justify-content-between align-items-center">
+                         </div>
                 </div>
-                 <div class="d-flex justify-content-between align-items-center">
-                     </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card shadow-sm">
-                <img src="/website/assets/img/proyecto2miniatura.jpg" class="card-img-top" alt="Descripción de la imagen">
-                <div class="card-body">
-                    <h3>Nombre del Proyecto 2</h3>
-                    <p>Breve descripción del proyecto. Tecnologías utilizadas: Diseño UI/UX, Figma.</p>
+            <div class="col">
+                <div class="card shadow-sm">
+                    <img src="/website/assets/img/proyecto2miniatura.jpg" class="card-img-top" alt="Descripción de la imagen">
+                    <div class="card-body">
+                        <h3>Nombre del Proyecto 2</h3>
+                        <p>Breve descripción del proyecto. Tecnologías utilizadas: Diseño UI/UX, Figma.</p>
+                    </div>
+                     <div class="d-flex justify-content-between align-items-center">
+                         </div>
                 </div>
-                 <div class="d-flex justify-content-between align-items-center">
-                     </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card shadow-sm">
-                <img src="/website/assets/img/proyecto3miniatura.jpg" class="card-img-top" alt="Descripción de la imagen">
-                <div class="card-body">
-                    <h3>Nombre del Proyecto 3</h3>
-                    <p>Breve descripción del proyecto. Tecnologías utilizadas: Diseño UI/UX, Figma.</p>
+            <div class="col">
+                <div class="card shadow-sm">
+                    <img src="/website/assets/img/proyecto3miniatura.jpg" class="card-img-top" alt="Descripción de la imagen">
+                    <div class="card-body">
+                        <h3>Nombre del Proyecto 3</h3>
+                        <p>Breve descripción del proyecto. Tecnologías utilizadas: Diseño UI/UX, Figma.</p>
+                    </div>
+                     <div class="d-flex justify-content-between align-items-center">
+                         </div>
                 </div>
-                 <div class="d-flex justify-content-between align-items-center">
-                     </div>
             </div>
         </div>
     </div>
