--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,10 +1,12 @@
 <!-- your html code here -->
 <div class="background d-flex flex-column align-items-center justify-content-center text-center"
 style="background-image: url('/website/assets/img/bg.jpg'); background-size: 100% 100%; background-repeat: no-repeat; background-position: center; height: 300px;"">
-    <div class="title">
-        <h1>ONE PAGE WONDER</h1>
-    </div>
-    <div class="text">
-        <H2>Will Knock Your Socks off</H2>
+    <div class="d-grid gap-3">
+        <div class="px-5 bg-light bg-opacity-50">
+            <h1>ONE PAGE WONDER</h1>
+        </div>
+        <div class="bg-light bg-opacity-50">
+            <h2>Will Knock Your Socks off</h2>
+        </div>
     </div>
 </div>
