[fix] Update first_heading.html error en div
pequeño error en div

--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,4 +1,4 @@
-<<div class="container py-4 d-flex align-items-center justify-content-center gap-3 mb-3">
+<div class="container py-4 d-flex align-items-center justify-content-center gap-3 mb-3">
     <div class="text" style="max-width: 600px;">
         <h1 class="fs-4 fw-bold text-dark">This First Heading Will Catch Your Eye</h1>
         <p class="fs-6 text-secondary">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Present commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
