--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,5 +1,5 @@
 <!-- your html code here -->
-<div class="background d-flex flex-column align-items-center justify-content-center text-center"
+<div class="background d-flex flex-column justify-content-center text-center"
 style="background-image: url('/website/assets/img/bg.jpg'); background-size: 100% 100%; background-repeat: no-repeat; background-position: center; height: 300px;"">
     <div class="d-grid gap-3">
         <div class="px-5 bg-light bg-opacity-50">
